--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,11 @@
   background-size: cover;
 }
 
+.herobackground {
+  background-color: #384054;
+  background-image: url("/img/herobackground.svg");
+  background-size: cover;
+}
 .boxsenderreceiver {
   width: 85%;
   padding: 5%;
